Prepare Neon, Render, Vercel, and Atlas deployment.
Migrate services to PostgreSQL, add Dockerfiles and render.yaml, and make Eureka/CORS/Feign/chat env-driven for cloud hosting.

Co-authored-by: Cursor <cursoragent@cursor.com>