@@ -1,5 +1,6 @@
 package com.campusworks.gateway.security;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
@@ -10,51 +11,40 @@ import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Centralized CORS Configuration for API Gateway
- * Handles all CORS for the entire microservices architecture
- * Prevents duplicate CORS headers by being the single source of truth
  */
 @Configuration
 public class SecurityConfig {
-    
-    /**
-     * Centralized CORS Filter - Single source of CORS configuration
-     * This is the ONLY place where CORS should be configured
-     * All other services should NOT have CORS configuration
-     */
+
+    @Value("${cors.allowed-origins:http://localhost:3000}")
+    private String allowedOrigins;
+
     @Bean
     @Order(Ordered.HIGHEST_PRECEDENCE)
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        
-        // Allow ONLY the frontend origin (no duplicates)
-        corsConfig.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        
-        // Allow all required HTTP methods
+
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+        corsConfig.setAllowedOrigins(origins);
+
         corsConfig.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
-        
-        // Allow all headers including Authorization
-        corsConfig.setAllowedHeaders(Arrays.asList("*"));
-        
-        // Allow credentials (cookies, authorization headers)
+        corsConfig.setAllowedHeaders(List.of("*"));
         corsConfig.setAllowCredentials(true);
-        
-        // Expose headers that frontend might need
         corsConfig.setExposedHeaders(Arrays.asList(
             "Authorization", "X-User-Id", "X-User-Email", "X-User-Roles"
         ));
-        
-        // Set max age for preflight requests (24 hours)
         corsConfig.setMaxAge(86400L);
-        
-        // Apply to all paths
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
-        
         return new CorsWebFilter(source);
     }
 }
